frontend/css/main.css
body {
  background-color: #F5F6F7;
}

#main-wrapper {
  max-width: 1000px;
  margin: 0px auto;
  line-height: 1.5;
}

p {
  margin-bottom: 1.5em
}

* {
  font-family: 'Cera Round Pro', sans-serif;
  margin: 0;
  box-sizing: border-box;
}

.gallery {
  width: 100%;
  max-width: 1000px;
  margin: 20px auto;
  position: relative;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.big-gallery-item {
  display: block;
  padding: 2.5%;
  width: 49.5%;
}

.gallery-item {
  display: block;
  margin: 0 0 9px 0;
  width: 49.5%;
}

@media screen and (min-width: 660px) {
  .gallery-item {
    width: 32.75%;
  }
}

@media screen and (min-width: 920px) {
  .gallery-item {
    width: 24.5%;
  }
}

img {
  width: 100%;
}

.gallery-item .partners {
  width: 100%;
  position: relative;
  height: 100%;
}

.partners .partner1 {
  z-index: 2;
  position: absolute;
  height: 80%;
  width: auto;
  left: 0;
  bottom: 32px;
}

.partners .partner2 {
  z-index: 1;
  position: absolute;
  bottom: 0;
  width: auto;
  height: 80%;
  right: 0;
  top: 0;
}

.partners .partner2:hover {
  z-index: 3;
}

.partners .info {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.info {
  text-align: center;
}

.gallery-item {
  text-decoration: none;
  color: black;
}

#colors {
  width: 100%;
  max-width: 1000px;
  margin: 20px auto;
  position: relative;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.pagination {
  display: flex;
  flex-flow: row;
  justify-content: center;
  padding: 2.5%;
  width: 99%;
}



.pagination a {
  color: black;
  float: left;
  padding: 8px 16px;
  min-width: 48px;
  width: 52px;
  text-align: center;
  text-decoration: none;
  transition: background-color .3s;
}

.pagination a.active {
  background-color: dodgerblue;
  color: white;
}

.pagination a:hover:not(.active) {
  background-color: #ddd;
}

